# kou1V2

./: .env  .gitignore  LICENSE  README.md  bot.py  build.py  build_bot.py  build_gui.py  data.json  gui.py  main.py  pyproject.toml  runtime_hook.py
awesome_bot/plugins/: kou1.py
awesome_bot/plugins/kou1/: __init__.py
